== 2.6.16 ==
Release date: 6 July 2022
* Enhancement: Advanced Accordion - Added ability to open accordions using keypress
* Enhancement: WP Forms - Added styling options for Section Divider

== 2.6.15 ==
Release date: June 9, 2022
* Enhancement: Team Member Carousel - Added support for Tiktok social icon
* Enhancement: WPForms - Added compatibility for Modern style dropdown fields
* Enhancement: Info Box Carousel - Added compatibility for Elementor containers

== 2.6.14 ==
Release date: May 11, 2022
* Enhancement: Advanced Accordion - Added Custom CSS ID option
* Enhancement: Advanced Accordion - Rearranged the repeater content inside tabs
* Enhancement: Flip Box - Added content background and padding options
* Fixed: Animated Gradient Background - Background overlay was overriding the gradient effect in editor
* Fixed: Hotspots - Tooltip position issue
* Enhancement: Core - Added support for Elementor Containers in Saved Section option
* Enhancement: Core - Added support for Elementor Containers to PowerPack extensions

== 2.6.13 ==
Release date: April 15, 2022
* Fixed: Image Comparison - JS error preventing the widget from working

== 2.6.12 ==
Release date: April 13, 2022
* Enhancement: Team Member - Added: Margin option for image
* Enhancement: Advanced Accordion - Added border radius option for title
* Enhancement: Twitter Tweet - Added support for URL dynamic tags
* Fixed: Posts - Align Arrows option was not working
* Fixed: Info Box - Minor CSS glitch
* Fixed: Display Conditions - Current Date option was not working for single day
* Enhancement: Image Comparison - Added classes to before and after images
* Enhancement: Image Comparison - Added Image Size option

== 2.6.11 ==
Release date: March 23, 2022
* Hotfix: Compatibility issues with Elementor 3.6.0
* Set the minimum required Elementor version to 3.2.0
* Enhancement: Twitter Tweet - Added dynamic tags support to Tweet URL field
* Enhancement: Info Box Carousel - Added grid layout option