@@ -110,7 +110,7 @@ class Pricing_Table extends Powerpack_Widget {
 	 *
 	 * Adds different input fields to allow the user to change and customize the widget settings.
 	 *
-	 * @since 2.2.5
+	 * @since 2.0.3
 	 * @access protected
 	 */
 	protected function register_controls() {
@@ -420,6 +420,15 @@ class Pricing_Table extends Powerpack_Widget {
 
 		$repeater = new Repeater();
 
+		$repeater->start_controls_tabs( 'tabs_features_content' );
+
+		$repeater->start_controls_tab(
+			'tab_features_content',
+			[
+				'label' => __( 'Content', 'powerpack' ),
+			]
+		);
+
 		$repeater->add_control(
 			'feature_text',
 			array(
@@ -447,18 +456,6 @@ class Pricing_Table extends Powerpack_Widget {
 		);
 
 		$repeater->add_control(
-			'tooltip_content',
-			array(
-				'label'       => __( 'Tooltip Content', 'powerpack' ),
-				'type'        => Controls_Manager::WYSIWYG,
-				'default'     => __( 'This is a tooltip', 'powerpack' ),
-				'dynamic'     => array(
-					'active' => true,
-				),
-			)
-		);
-
-		$repeater->add_control(
 			'select_feature_icon',
 			array(
 				'label'            => __( 'Icon', 'powerpack' ),
@@ -470,6 +467,36 @@ class Pricing_Table extends Powerpack_Widget {
 				),
 				'fa4compatibility' => 'feature_icon',
 			)
+		);
+
+		$repeater->end_controls_tab();
+
+		$repeater->start_controls_tab(
+			'tab_features_tooltip',
+			[
+				'label' => __( 'Tooltip', 'powerpack' ),
+			]
+		);
+
+		$repeater->add_control(
+			'tooltip_content',
+			array(
+				'label'       => __( 'Tooltip Content', 'powerpack' ),
+				'type'        => Controls_Manager::WYSIWYG,
+				'default'     => __( 'This is a tooltip', 'powerpack' ),
+				'dynamic'     => array(
+					'active' => true,
+				),
+			)
+		);
+
+		$repeater->end_controls_tab();
+
+		$repeater->start_controls_tab(
+			'tab_features_style',
+			[
+				'label' => __( 'Style', 'powerpack' ),
+			]
 		);
 
 		$repeater->add_control(
@@ -512,6 +539,10 @@ class Pricing_Table extends Powerpack_Widget {
 				),
 			)
 		);
+
+		$repeater->end_controls_tab();
+
+		$repeater->end_controls_tabs();
 
 		$this->add_control(
 			'table_features',
@@ -577,7 +608,7 @@ class Pricing_Table extends Powerpack_Widget {
 					'click' => __( 'Click', 'powerpack' ),
 				),
 				'frontend_available' => true,
-				'condition' => [
+				'condition'          => [
 					'show_tooltip' => 'yes',
 				],
 			]
@@ -651,6 +682,9 @@ class Pricing_Table extends Powerpack_Widget {
 					'swing' => __( 'Swing', 'powerpack' ),
 				),
 				'frontend_available' => true,
+				'condition' => [
+					'show_tooltip' => 'yes',
+				],
 			)
 		);
 
@@ -815,6 +849,9 @@ class Pricing_Table extends Powerpack_Widget {
 				'min'                => -9999999,
 				'step'               => 1,
 				'frontend_available' => true,
+				'condition'          => [
+					'show_tooltip' => 'yes',
+				],
 			)
 		);
 
@@ -1246,8 +1283,8 @@ class Pricing_Table extends Powerpack_Widget {
 				],
 				'size_units'            => [ 'px', '%' ],
 				'condition'             => [
-					'icon_type'   => 'image',
-					'icon_image!' => '',
+					'icon_type'        => 'image',
+					'icon_image[url]!' => '',
 				],
 				'selectors'             => [
 					'{{WRAPPER}} .pp-pricing-table-icon' => 'width: {{SIZE}}{{UNIT}}',
@@ -2316,6 +2353,28 @@ class Pricing_Table extends Powerpack_Widget {
 			]
 		);
 
+		$this->add_responsive_control(
+			'tooltip_icon_spacing',
+			array(
+				'label'      => __( 'Icon Spacing', 'powerpack' ),
+				'type'       => Controls_Manager::SLIDER,
+				'size_units' => array( 'px' ),
+				'range'      => array(
+					'px' => array(
+						'min' => 1,
+						'max' => 100,
+					),
+				),
+				'selectors'  => array(
+					'{{WRAPPER}} .pp-table-cell .pp-table-tooltip-icon' => 'margin-left: {{SIZE}}px;',
+				),
+				'condition'  => [
+					'show_tooltip'       => 'yes',
+					'tooltip_display_on' => 'icon',
+				],
+			)
+		);
+
 		$this->end_controls_section();
 	}
 
@@ -3054,7 +3113,7 @@ class Pricing_Table extends Powerpack_Widget {
 						$this->add_render_attribute( $feature_content_key, 'class', 'pp-pricing-table-feature-content' );
 
 						$tooltip_icon_key = $this->get_repeater_setting_key( 'tooltip_icon_key', 'table_features', $index );
-						$this->add_render_attribute( $tooltip_icon_key, 'class', 'pp-pricing-table-tooltip-icon' );
+						$this->add_render_attribute( $tooltip_icon_key, 'class', ['pp-pricing-table-tooltip-icon', 'pp-icon'] );
 
 						$tooltip_content_key = $this->get_repeater_setting_key( 'tooltip_content_key', 'table_features', $index );
 
@@ -3083,7 +3142,7 @@ class Pricing_Table extends Powerpack_Widget {
 						<li <?php echo wp_kses_post( $this->get_render_attribute_string( $feature_list_key ) ); ?>>
 							<div <?php echo wp_kses_post( $this->get_render_attribute_string( $feature_content_key ) ); ?>>
 								<?php
-								if ( ! empty( $item['select_feature_icon'] ) || ( ! empty( $item['feature_icon']['value'] ) && $is_new ) ) : ?>
+								if ( ! empty( $item['feature_icon'] ) || ( ! empty( $item['select_feature_icon']['value'] ) && $is_new ) ) : ?>
 									<span class="pp-pricing-table-fature-icon pp-icon">
 										<?php
 										if ( $is_new || $migrated ) {
@@ -3367,7 +3426,7 @@ class Pricing_Table extends Powerpack_Widget {
 						} #>
 						<li class="elementor-repeater-item-{{ item._id }} <# if ( item.exclude == 'yes' ) { #> excluded <# } #>">
 							<div {{{ view.getRenderAttributeString( featureContentKey ) }}}>
-								<# if ( item.select_feature_icon || item.feature_icon.value ) { #>
+								<# if ( item.feature_icon || item.select_feature_icon.value ) { #>
 									<span class="pp-pricing-table-fature-icon pp-icon">
 									<#
 										iconsHTML[ index ] = elementor.helpers.renderIcon( view, item.select_feature_icon, { 'aria-hidden': true }, 'i', 'object' );
